--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Please leave a rating!</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/favicon-32x32.png">
     <script src="script.js" defer></script>
   </head>
   <body>
